# simple_restaurant_client

./: .gitignore  Cargo.toml  README.md
src/: main.rs  random_generators.rs  request_data_types.rs
