[package]
name = "simple_restaurant_client"
version = "0.1.0"
edition = "2021"
authors = ["Ishtiaque"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json","blocking"] }
serde = { version = "1.0", features = ["derive"] }
threadpool = "1.0"
tokio = { version = "1", features = ["full"] }

